manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-institute-be
  labels:
    app: ms-institute-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-institute-be
  template:
    metadata:
      labels:
        app: ms-institute-be
    spec:
      #      imagePullSecrets:
      #        - name: image-pull-secret
      containers:
        - name: ms-institute-be
          image:  flavioillanes/as201-ms-institute:v24
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            initialDelaySeconds: 50
            periodSeconds: 3
            httpGet:
              port: 8083
              path: /actuator/health/readiness
          livenessProbe:
            initialDelaySeconds: 50
            periodSeconds: 3
            httpGet:
              port: 8083
              path: /actuator/health/liveness
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
